--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ rust-version = "1.90"
 
 [workspace.dependencies]
 tagit-changelog = { version = "0.0.0-a.0", path = "crates/tagit-changelog" }
-tagit-core = { version = "0.0.0-a.0", path = "crates/tagit-core" }
+tagit-core = { version = "0.3.0", path = "crates/tagit-core" }
 
 anyhow = "1.0.100"
 chrono = "0.4.42"
