--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ strum = { version = "0.27.2", features = ["derive"] }
 
 [package]
 name = "tagit"
-version = "0.0.0-a.0+ci.0"
+version = "0.0.0-a.1"
 description = "collection of utilities used by tagit CLI tool internally"
 authors.workspace = true
 edition.workspace = true
@@ -32,6 +32,7 @@ license.workspace = true
 publish.workspace = true
 repository.workspace = true
 rust-version.workspace = true
+exclude = ["/.github", "/bin", "/.gitattribues", "/.gitignore", "/codegen.sh"]
 
 [dependencies]
 tagit-changelog.workspace = true
